# jonwis.github.io

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
code/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
code/ATLWinRT/: ATLWithWinRT.sln  README.md  SampleObject.cpp  SampleObject.vcxproj
code/ATLWinRT/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
code/Coroutines/: CMakeLists.txt  coroutines.cpp
code/CredPickerSample/: App.xaml  App.xaml.cs  CredPickerSample.csproj  CredPickerSample.sln  MainWindow.xaml  MainWindow.xaml.cs
code/CredPickerSampleWinUI3/CredPickerSampleWinUI3/: App.xaml  App.xaml.cpp  App.xaml.h  CredPickerSampleWinUI3.vcxproj  CredPickerSampleWinUI3.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  app.manifest  pch.h  readme.txt
code/CredPickerSampleWinUI3/CredPickerSampleWinUI3 (Package)/: CredPickerSampleWinUI3 (Package).wapproj  Package.appxmanifest
code/DllPathBinding/: CMakeLists.txt  main.cpp
code/Formatter/: CMakeLists.txt  format_conversions.cpp
code/LaunchWithResults/: LaunchWithResults.sln
code/LaunchWithResults/LauncherApp/: App.xaml  App.xaml.cpp  App.xaml.h  LauncherApp.vcxproj  LauncherApp.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  app.manifest  readme.txt
code/LaunchWithResults/ResultsSourceApp/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  ResultsSourceApp.vcxproj  ResultsSourceApp.vcxproj.filters  app.manifest  packages.config  pch.h  readme.txt
code/MapSpeed/: CMakeLists.txt  CMakePresets.json  vcpkg.json
code/MapSpeed/src/: map_speeds.cpp
code/MemMapLargePages/: CMakeLists.txt  CMakePresets.json  main.cpp
code/ProtocolActivatedSample/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProtocolActivatedSample.csproj  ProtocolActivatedSample.sln  register.ps1
code/ProtocolLauncher/: NativeMethods.txt  Program.cs  ProtocolLauncher.csproj
code/SchedulingToys/: QueueProcessor.cpp  SchedulingToys.cpp  SchedulingToys.slnx  SchedulingToys.vcxproj  SchedulingToys.vcxproj.filters  WorkerQueue.cpp
code/SystemIdentifiers/: SystemIdentifiers.vcxproj  main.cpp  readme.txt
code/TlgAutoTest/: README.md  TlgAutoTest.sln  TlgAutoTest.vcxproj  TlgAutoTest.vcxproj.filters  TraceLoggingForStrings.h  main.cpp
code/VersionTargeting/: Program.cs  VersionTargeting.csproj  VersionTargeting.sln
code/cppwinrt-proj/: CMakeLists.txt  PLAN-fast-child-interface.md  README.md  cached_types.cpp  cppwinrt_replicant.cpp  experiment.cpp  self_replacing.cpp  selfupgrade.cpp  shared.h  thunk_experiment.h  thunk_stubs.asm  thunk_stubs_arm64.asm  thunk_stubs_arm64ec.asm  thunk_stubs_x86.asm  thunk_tests.cpp
code/min-winml/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
code/static-loading/: CMakeLists.txt  README.md
code/static-loading/manifests/: core.manifest  panmap.dll.manifest  testing.exe.manifest
code/static-loading/src/: batmeter.cpp  batmeter.h  main.cpp  panmap.cpp  panmap.h  panmap.rc  testing.rc
code/temp-dll/: CMakeLists.txt  sample.cpp  sample.h
notes/winrt-design/: README.md  abi_definition.md  async_is_hazardous.md  build_binaries_well.md  runtimeclass_composition.md  strong_vs_weak_typing.md  system_interfaces.md
notes/winrt-projection-throughput/: README.md  REPRODUCE.md
scripts/: analyze-thunks.ps1  disassemble-exe.ps1
thumbprint/: BinaryThumbprint.slnx
thumbprint/BinaryThumbprint/: PeThumbprinter.cs
thumbprint/BinaryThumbprint.Cli/: BinaryThumbprint.Cli.csproj  Program.cs
thumbprint/BinaryThumbprint.Tests/: BinaryThumbprint.Tests.csproj  PeThumbprinterTests.cs
